--- a/startfinal/nicholaschang.Rmd
+++ b/startfinal/nicholaschang.Rmd
@@ -196,21 +196,18 @@ get_album_data <- function(album_ids, token) {
     
     map_dfr(content$albums, function(album) {
       tibble(
-        id = album$id,
-        name = album$name,
-        release_date = album$release_date,
-        artists = paste(album$artists, collapse = ", "),
+        album_id = album$id,
+        album_name = album$name,
+        album_release_date = album$release_date,
+        album_artists = paste(map_chr(album$artists, ~ .x$name), collapse = ", ") 
       )
     })
   })
 }
-
-# Assigning data from previous function into a table
-album_data_2024 <- get_album_data(album_ids_2024, token)
 ```
 
-
 ```{r}
+# Collecting track data for a given album via function
 get_album_tracks <- function(album_id, token) {
   
   url <- paste0("https://api.spotify.com/v1/albums/", album_id, "/tracks")
@@ -234,14 +231,38 @@ get_album_tracks <- function(album_id, token) {
     )
   })
 }
-
-
-all_albums <- map_dfr(album_ids_2018, get_album_tracks, token = token)
-
-# Merge track data with artist names
-#all_tracks <- left_join(all_tracks, album_data |> select(artist_id, artist_name), by = "artist_id")
 ```
 
+```{r}
+# For loop for creating album_data, album_track_data, and combined_data for years 2018 to 2024
+
+# Define the years
+years <- 2018:2024
+
+# Loop through each year to create album_data_YYYY and album_tracks_YYYY
+for (year in years) {
+  # Get the album_ids for the current year
+  album_ids <- get(paste0("album_ids_", year))
+  
+  # Create album_data_YYYY
+  assign(
+    paste0("album_data_", year),
+    get_album_data(album_ids, token)
+  )
+  
+  # Create album_tracks_YYYY
+  assign(
+    paste0("album_tracks_", year),
+    map_dfr(album_ids, get_album_tracks, token = token)
+  )
+  
+  # Create combined_YYY
+  assign(
+    paste0("combined_", year), 
+    left_join(get(paste0("album_data_", year)), get(paste0("album_tracks_", year)), by = "album_id")
+  )
+}
+```
 
 
 
