added year column

--- a/startfinal/combined_artists_infunction.Rmd
+++ b/startfinal/combined_artists_infunction.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "final"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -80,7 +82,7 @@ merge_artist_data <- function(artist_ids){
   artists_data_temp <- get_artists_data(artist_ids, token)
   all_tracks_temp <- map_dfr(artist_ids, get_artist_top_tracks, token = token)
   return(left_join(all_tracks_temp, artists_data_temp |> select(artist_id, artist_name), by = "artist_id"))
-}s
+}
 ```
 
 
@@ -155,13 +157,13 @@ artist_ids_2024 <- c(
 
 ```{r}
 # Merge track data with artist names
-  all_tracks_2018 <- merge_artist_data(artist_ids_2018)
-  all_tracks_2019 <- merge_artist_data(artist_ids_2019)
-  all_tracks_2020 <- merge_artist_data(artist_ids_2020)
-  all_tracks_2021 <- merge_artist_data(artist_ids_2021)
-  all_tracks_2022 <- merge_artist_data(artist_ids_2022)
-  all_tracks_2023 <- merge_artist_data(artist_ids_2023)
-  all_tracks_2024 <- merge_artist_data(artist_ids_2024)
+  all_tracks_2018 <- merge_artist_data(artist_ids_2018) |> mutate(year = 2018)
+  all_tracks_2019 <- merge_artist_data(artist_ids_2019) |> mutate(year = 2019)
+  all_tracks_2020 <- merge_artist_data(artist_ids_2020) |> mutate(year = 2020)
+  all_tracks_2021 <- merge_artist_data(artist_ids_2021) |> mutate(year = 2021)
+  all_tracks_2022 <- merge_artist_data(artist_ids_2022) |> mutate(year = 2022)
+  all_tracks_2023 <- merge_artist_data(artist_ids_2023) |> mutate(year = 2023)
+  all_tracks_2024 <- merge_artist_data(artist_ids_2024) |> mutate(year = 2024)
 
 # Combine all years
   combined_tracks <- bind_rows(
