--- a/startfinal/nicholaschang.Rmd
+++ b/startfinal/nicholaschang.Rmd
@@ -10,6 +10,7 @@ library(plotly)
 library(DT)
 library(purrr)
 library(httr)
+library(stringr)
 ```
 
 ```{r}
@@ -55,7 +56,7 @@ get_artists_data <- function(artist_ids, token) {
 }
 
 get_artist_top_tracks <- function(artist_id, token) {
-  url <- paste0("https://api.spotify.com/v1/artists/", artist_id, "/top-tracks?market=US")
+  url <- str_c("https://api.spotify.com/v1/artists/", artist_id, "/top-tracks?market=US")
   
   req <- request(url) |>
     req_headers(Authorization = paste("Bearer", token))
@@ -210,7 +211,7 @@ get_album_data <- function(album_ids, token) {
 # Collecting track data for a given album via function
 get_album_tracks <- function(album_id, token) {
   
-  url <- paste0("https://api.spotify.com/v1/albums/", album_id, "/tracks")
+  url <- str_c("https://api.spotify.com/v1/albums/", album_id, "/tracks")
   
   req <- GET(
     url,
@@ -242,26 +243,44 @@ years <- 2018:2024
 # Loop through each year to create album_data_YYYY and album_tracks_YYYY
 for (year in years) {
   # Get the album_ids for the current year
-  album_ids <- get(paste0("album_ids_", year))
+  album_ids <- get(str_c("album_ids_", year))
   
   # Create album_data_YYYY
   assign(
-    paste0("album_data_", year),
+    str_c("album_data_", year),
     get_album_data(album_ids, token)
   )
   
   # Create album_tracks_YYYY
   assign(
-    paste0("album_tracks_", year),
+    str_c("album_tracks_", year),
     map_dfr(album_ids, get_album_tracks, token = token)
   )
   
   # Create combined_YYY
   assign(
-    paste0("combined_", year), 
-    left_join(get(paste0("album_data_", year)), get(paste0("album_tracks_", year)), by = "album_id")
+    str_c("combined_", year), 
+    left_join(get(str_c("album_data_", year)), get(str_c("album_tracks_", year)), by = "album_id")
+  )
+  
+  # Add charted_year column to combined_YYYY
+  assign(
+    str_c("combined_", year),
+    get(str_c("combined_", year)) %>% mutate(charted_year = year)
   )
 }
+```
+
+```{r}
+combined_album_all <- bind_rows(
+  combined_2018,
+  combined_2019,
+  combined_2020,
+  combined_2021,
+  combined_2022,
+  combined_2023,
+  combined_2024
+)
 ```
 
 
@@ -277,7 +296,7 @@ all_tracks |>
         y = ~popularity,
         type = 'bar',
         color = ~explicit,
-        colors = c('blue', 'red'),
+        colors = c('#191414', '#1db954'),
         text = ~paste("Track:", track_name,
                       "\nArtist:", artist_name,
                       "\nPopularity:", popularity,
@@ -289,6 +308,7 @@ all_tracks |>
 ```
 
 ## Resources:
+
 1. Revealed: The Top Artists, Songs, Albums, Podcasts, and Audiobooks of 2024 (https://newsroom.spotify.com/2024-12-04/top-songs-artists-podcasts-audiobooks-albums-trends-2024/)
 
 2. Spotify Web API
